--- a/UI/skd-ref-site/src/assets/i18n/nl.json
+++ b/UI/skd-ref-site/src/assets/i18n/nl.json
@@ -1,132 +1,132 @@
 {
-  "Welcome": {
-    "Hello": "Hallo!",
-    "Welcome": "Welkom op de SketchDaily referentiemateriaal dinges.",
-    "LookingForSomethingElseToDraw": "Ben je op zoek naar iets anders om te tekenen?",
-    "JoinTheFun": "Doe mee!"
-  },
-  "FullBody": {
-    "FullBody": "Volledig lichaam",
-    "All": "Alles",
-    "Clothing": "Kleding",
-    "Clothed": "Gekleed",
-    "Nude": "Naakt",
-    "IncludeNSFWImages": "Voeg ook NSFW afbeeldingen toe",
-    "Pose": "Pose",
-    "Action": "Actie",
-    "Stationary": "Statisch"
-  },
-  "BodyPart": {
-    "BodyPart": "Lichaamsdeel",
-    "Hand": "Handen",
-    "Foot": "Feet",
-    "Head": "Hoofden",
-    "All": "Alles"
-  },
-  "Animal": {
-    "Animal": "Dier",
-    "Species": "Soorten",
-    "Bird": "Vogel",
-    "Fish": "Vis",
-    "ReptileOrAmphibian": "Reptiel of amfibieën",
-    "Category": "Categorie",
-    "Living": "Leven",
-    "SkeletonOrBones": "Skelet of botten",
-    "Bug": "Bug",
-		"Mammal": "Mammal",
-    "All": "Alles"
-  },
-  "Structure": {
-		"Structure": "Structure",
-		"House": "House",
-		"Building": "Building",
-		"Other": "Other",
-		"All": "All"
+	"Welcome": {
+		"Hello": "Hallo!",
+		"Welcome": "Welkom op de SketchDaily referentiemateriaal dinges.",
+		"LookingForSomethingElseToDraw": "Ben je op zoek naar iets anders om te tekenen?",
+		"JoinTheFun": "Doe mee!"
+	},
+	"FullBody": {
+		"FullBody": "Volledig lichaam",
+		"All": "Alles",
+		"Clothing": "Kleding",
+		"Clothed": "Gekleed",
+		"Nude": "Naakt",
+		"IncludeNSFWImages": "Voeg ook NSFW afbeeldingen toe",
+		"Pose": "Pose",
+		"Action": "Actie",
+		"Stationary": "Statisch"
+	},
+	"BodyPart": {
+		"BodyPart": "Lichaamsdeel",
+		"Hand": "Handen",
+		"Foot": "Feet",
+		"Head": "Hoofden",
+		"All": "Alles"
+	},
+	"Animal": {
+		"Animal": "Dier",
+		"Species": "Soorten",
+		"Bird": "Vogel",
+		"Fish": "Vis",
+		"ReptileOrAmphibian": "Reptiel of amfibieën",
+		"Category": "Categorie",
+		"Living": "Leven",
+		"SkeletonOrBones": "Skelet of botten",
+		"Bug": "Insect",
+		"Mammal": "Zoogdier",
+		"All": "Alles"
+	},
+	"Structure": {
+		"Structure": "Architecturaal",
+		"House": "Huis",
+		"Building": "Gebouw",
+		"Other": "Andere",
+		"All": "Alles"
 	},
 	"Vegetation": {
-		"Vegetation": "Vegetation",
-		"Flowers": "Flowers",
-		"Plants": "Plants",
-		"PhotoType": "Photo Type",
-		"Closeup": "Closeup",
-		"Full": "Full",
-		"All": "All"
+		"Vegetation": "Vegetatie",
+		"Flowers": "Bloemen",
+		"Plants": "Planten",
+		"PhotoType": "Foto type",
+		"Closeup": "Close-up",
+		"Full": "Volledig",
+		"All": "Alles"
 	},
-  "Filters": {
-    "Type": "Type",
-    "All": "Alles",	
-    "Gender": "Geslacht",
-    "Male": "Man",
-    "Female": "Vrouw",
-    "View": "Perspectief",
-    "Front": "Voorkant",
-    "Side": "Zijkant",
-    "Back": "Achterkant",
-    "AboveOrBelow": "Boven of beneden",
-    "ClassMode": "Class-modus",
-    "Class": "Klasse",
-    "Minutes": "notulen",
-    "Seconds": "seconden",
-    "Hour": "uur",
-    "Hours": "uur",
-    "NoTimers": "Geen timers",
-    "OnlyMostRecentImages": "Gebruik alleen de meest recente afbeeldingen",
-    "NumberOfImages": "Aantal afbeeldingen",
-    "Start": "Begin", 
-    "Time": "Tijd",
-		"Break": "Break",
+	"Filters": {
+		"Type": "Type",
+		"All": "Alles",
+		"Gender": "Geslacht",
+		"Male": "Man",
+		"Female": "Vrouw",
+		"View": "Perspectief",
+		"Front": "Voorkant",
+		"Side": "Zijkant",
+		"Back": "Achterkant",
+		"AboveOrBelow": "Boven of beneden",
+		"ClassMode": "Klas modus",
+		"Class": "Klas",
+		"Minutes": "minuten",
+		"Seconds": "seconden",
+		"Hour": "uur",
+		"Hours": "uren",
+		"NoTimers": "Geen timers",
+		"OnlyMostRecentImages": "Gebruik alleen de meest recente afbeeldingen",
+		"NumberOfImages": "Aantal afbeeldingen",
+		"Start": "Begin",
+		"Time": "Tijd",
+		"Break": "Pauze",
 		"NSFW": "NSFW",
-		"true": "True",
-		"false": "False"
-  },
-  "Header": {
-    "Title": "r/SketchDaily Referentiemateriaal",
-    "AddImages": "Afbeeldingen toevoegen",
-    "News": "Nieuws",
-    "Logs": "Logs",
-    "LogIn": "Log in",
-    "LogOut": "Log out",
-    "YourImages": "Your images",
-    "ManageImages": "Manage images"
-  },
-  "News": {
-    "WhatsNew": "Wat is nieuw?",
-    "Announcement": "Aankondiging"
-  },
-  "ImageViewer": {
-    "Timer": "Timer",
-    "Paused": "Onderbroken",
-    "ImageInfo": "Afbeeldingsinformatie",
-    "Source": "Bron",
-    "Model": "Model",
-    "Photographer": "Fotograaf",
-    "DateAdded": "Datum Toegevoegd",
-    "TermsOfUse": "Gebruiksvoorwaarden",
-    "Classifications": "Classificatie",
-    "About": "Over",
-    "LeftControls": "Left - Vorige afbeelding",
-    "RightControls": "Right - Volgende afbeelding",
-    "SpacebarControls": "Spacebar - Pauze",
-    "EscapeControls": "Escape - Hou op",
-    "VisitUsOnReddit": "Bezoek ons ​​op Reddit!",
-		"Next": "Next",
-		"TakeABreak": "Take a break!",
-		"ItsTimeForABreak": "It's time for a break. Your class will resume once the timer reaches 0.",
-		"NoMoreImages": "No more images matching your filters. Sorry!",
-		"Close": "Close",
-		"ClassComplete": "Class complete",
-		"NiceWork": "Nice work, you finished the class!",
-		"MaybeTakeABreak": "Maybe take a little break and check out what people have been up to on <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
-  },
+		"true": "Waar",
+		"false": "Niet waar"
+	},
+	"Header": {
+		"Title": "r/SketchDaily Referentiemateriaal",
+		"AddImages": "Afbeeldingen toevoegen",
+		"News": "Nieuws",
+		"Logs": "Logs",
+		"LogIn": "Log in",
+		"LogOut": "Log out",
+		"YourImages": "Uw afbeeldingen",
+		"ManageImages": "Afbeeldingen beheren"
+	},
+	"News": {
+		"WhatsNew": "Wat is nieuw?",
+		"Announcement": "Aankondiging"
+	},
+	"ImageViewer": {
+		"Timer": "Timer",
+		"Paused": "Onderbroken",
+		"ImageInfo": "Afbeeldingsinformatie",
+		"Source": "Bron",
+		"Model": "Model",
+		"Photographer": "Fotograaf",
+		"DateAdded": "Datum Toegevoegd",
+		"TermsOfUse": "Gebruiksvoorwaarden",
+		"Classifications": "Classificatie",
+		"About": "Over",
+		"LeftControls": "Left - Vorige afbeelding",
+		"RightControls": "Right - Volgende afbeelding",
+		"SpacebarControls": "Spatiebalk - Pauze",
+		"EscapeControls": "Escape - Hou op",
+		"VisitUsOnReddit": "Bezoek ons ​​op Reddit!",
+		"Next": "Volgende",
+		"TakeABreak": "Neem een pauze!",
+		"ItsTimeForABreak": "Het is tijd voor een pauze. De klas gaat voort zodra de timer op 0 staat.",
+		"NoMoreImages": "Geen afbeeldingen meer die passen bij uw filter. Sorry!",
+		"Close": "Sluiten",
+		"ClassComplete": "Klas afgerond",
+		"NiceWork": "Goed werk, je hebt de klas afgerond",
+		"MaybeTakeABreak": "Misschien kan je even een pauze nemen en even op <a href='https://www.reddit.com/r/sketchdaily'>de subreddit</a> kijken wat anderen hebben gemaakt!"
+	},
 	"Timers": {
-		"seconds": "{{total}} seconds",
-		"minutes": "{{total}} minutes",
-		"Class mode": "Class mode",
-		"No timers": "No timers",
-		"30 minutes": "30 minutes",
-		"1 hour": "1 hour",
-		"2 hours": "2 hours",
-		"3 hours": "3 hours",
-		"6 hours": "6 hours"
+		"seconds": "{{total}} seconden",
+		"minutes": "{{total}} minuten",
+		"Class mode": "Klas modus",
+		"No timers": "Geen timers",
+		"30 minutes": "30 minuten",
+		"1 hour": "1 uur",
+		"2 hours": "2 uren",
+		"3 hours": "3 uren",
+		"6 hours": "6 uren"
 	}
 }
